--- a/Proyecto/templates/plantilla.html
+++ b/Proyecto/templates/plantilla.html
@@ -16,8 +16,8 @@
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item me-4"><a class="nav-link fw-medium text-dark" href="/administrar_medicos">Médicos</a></li>
                 <li class="nav-item me-4"><a class="nav-link fw-medium text-dark" href="/consultar_pacientes">Pacientes</a></li>
-                <li class="nav-item me-4"><a class="nav-link fw-medium text-dark" href="/consultar_citas">Citas</a></li>
-                <li class="nav-item"><a class="nav-link fw-medium text-dark" href="/exploracion_diagnostico">Exploración</a></li>
+                <li class="nav-item me-4"><a class="nav-link fw-medium text-dark" href="/logout"> Cerrar Sesión </a></li>
+                
             </ul>
         </div>
     </nav>
