--- a/Proyecto/templates/registrar_pacientes.html
+++ b/Proyecto/templates/registrar_pacientes.html
@@ -73,8 +73,17 @@
 
                             <hr class="my-4">
                             <div class="d-flex justify-content-between">
-                                <button class="btn btn-outline-dark btn-sm" type="button" id="btn-clear">Limpiar</button>
+                                
+                                <a href="{{ url_for('ConsultarP.pacientes') }}" class="btn btn-outline-dark">
+                                    <i class="fas fa-arrow-left"></i> Volver a Administración
+                                </a>
+                                
                                 <button class="btn btn-dark btn-sm" type="submit">Registrar Expediente</button>
+                                
+                                
+                                
+
+
                             </div>
                         </form>   
                     </div>
